# kbac

./: .gitignore  README.md
DynamicProject/: CMakeLists.txt  README.md
DynamicProject/HelloLib/: helloConfig.cmake  helloTargets.cmake
HelloLib/: CMakeLists.txt  README.md
HelloWorld/: CMakeLists.txt  README.md  main.cpp
HelloWorld/include/: ClassA.h
LibUsage/: CMakeLists.txt  README.md
MultiProject/: CMakeLists.txt  README.md
MultiProject/HelloExe/: README.md
MultiProject/HelloLib/: CMakeLists.txt  ClassA.cpp  README.md
UseGTest/: CMakeLists.txt
UseGTest/ext/googletest/: CMakeLists.txt
UseGTest/my_library/: CMakeLists.txt  README.md
UseGTest/my_library/include/: my_fancy_library_class.hpp
UseGTest/my_library/src/: my_fancy_library_class.cpp
UseGTest/my_library/test/: CMakeLists.txt
UseGTest/my_library/test/src/: my_fancy_library_class_test.cpp
